=================
Changes for Crate
=================

Unreleased
==========

 - Fix: correctly plan group by queries using HAVING clause

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - implemented table ``information_schema.schemata`` with column ``schema_name``
   listing all available schemas

 - Array types are now fully supported in dynamic schemas. Note that
   Crate performs an internal migration, therefore downgrading to an
   older version is not supported

 - Updated Elasticsearch to 1.4.1

 - Fix: improve performance of regex functions by actually
   pre-compiling their used patterns (if given as literal)

 - Fix: The clustered-by columns could be updated if they were nested.

 - Fix: Fixed an edge case where group by queries on system tables or
   grouping on primary key or routing column and using limit or
   selecting the same aggregation twice did not execute correctly.

 - Fixed possible race condition that could cause the `LIMIT` to not
   be applied correctly.

 - Add sql query breaker which will terminate a query execution if too
   much memory will be consumed.

 - Fixed NPE which could occur on a shard failure while collecting
   distributed (e.g. group by query)

 - Fix: correctly validate array values in INSERT and UPDATE
   statements

 - Fix: NULL element in array in first element of bulk insert threw
   NPE

 - Fix: array columns that were nested inside multiple objects had
   incorrect data type (type of their elements instead of array type)

 - Fix: adding column on partitioned table without partitions threw
   exception although column was added to schema

 - Use flake ids for interal id generation
