@@ -24,11 +24,11 @@ package io.crate.exceptions;
 public class ColumnUnknownException extends ResourceUnknownException {
 
     public ColumnUnknownException(String columnName) {
-        super(String.format("Column '%s' unknown", columnName));
+        super(String.format("Column %s unknown", columnName));
     }
 
     public ColumnUnknownException(String columnName, Throwable e) {
-        super(String.format("Column '%s' unknown", columnName), e);
+        super(String.format("Column %s unknown", columnName), e);
     }
 
     @Override
